crates/jdlint_dart_parser/tests/snapshots/parser_tests__snap_typedef_function_type.snap
---
source: crates/jdlint_dart_parser/tests/parser_tests.rs
assertion_line: 1384
expression: "prog.declarations[0]"
---
TypeAlias(
    TypeAliasDecl {
        annotations: [],
        name: Identifier {
            name: "Predicate",
            span: Span {
                start: 8,
                end: 17,
            },
        },
        type_params: [
            TypeParam {
                name: Identifier {
                    name: "T",
                    span: Span {
                        start: 18,
                        end: 19,
                    },
                },
                bound: None,
                span: Span {
                    start: 18,
                    end: 19,
                },
            },
        ],
        aliased: Function(
            FunctionType {
                return_type: Some(
                    Named(
                        NamedType {
                            segments: [
                                Identifier {
                                    name: "bool",
                                    span: Span {
                                        start: 23,
                                        end: 27,
                                    },
                                },
                            ],
                            type_args: [],
                            is_nullable: false,
                            span: Span {
                                start: 23,
                                end: 28,
                            },
                        },
                    ),
                ),
                type_params: [],
                params: [
                    FunctionTypeParam {
                        name: Some(
                            Identifier {
                                name: "value",
                                span: Span {
                                    start: 39,
                                    end: 44,
                                },
                            },
                        ),
                        param_type: Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "T",
                                        span: Span {
                                            start: 37,
                                            end: 38,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 37,
                                    end: 39,
                                },
                            },
                        ),
                        is_required: false,
                        is_named: false,
                    },
                ],
                is_nullable: false,
                span: Span {
                    start: 23,
                    end: 45,
                },
            },
        ),
        span: Span {
            start: 0,
            end: 46,
        },
    },
)
